<resources>
    <string name="app_name">ClinicaCorachan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre de Usuario</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="action_cerrar">Cerrar Sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_citas">Reserva de Citas</string>
    <string name="menu_historial">Historia Clínica</string>
    <string name="menu_recordatorio">Campañas de Salud</string>
    <string name="menu_digital">Digitalización</string>
    <string name="menu_ubicacion">Localización</string>
    <string name="saved_dni">saved_dni</string>
</resources>