<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/ic_menu_cita"
            android:title="@string/menu_citas" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_menu_historial"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_campaña_salud"
            android:icon="@drawable/ic_menu_recordar"
            android:title="@string/menu_recordatorio" />
        <item
            android:id="@+id/nav_digital"
            android:icon="@drawable/ic_menu_digital"
            android:title="@string/menu_digital" />
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_menu_ubicacion"
            android:title="@string/menu_ubicacion" />
    </group>
</menu>